gcc/testsuite/gcc.c-torture/compile/strcpy-2.c
@@ -1,0 +1,7 @@
+char wrkstr_un[270];
+extern void
+LoadUserAlph (char *s)
+{
+  s = &wrkstr_un[0];
+  __builtin_strcpy (s, "");
+};
